Fix spacing in hero subtitle

--- a/src/App.css
+++ b/src/App.css
@@ -597,7 +597,7 @@ body {
   display: inline-block;
   min-width: 200px;
   text-align: left;
-  margin-left: 0.5rem;
+  margin-left: 0.15rem;
 }
 
 .cursor {
